# dota2

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  README.rst  WORKSPACE  pants.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
build_support/fmt/: .isort.cfg
build_support/lint/: .pylintrc
src/go/: BUILD.bazel
src/go/dota2/: BUILD.bazel  main_test.go
src/python/dota2/: BUILD.bazel  __init__.py  __main__.py  base.py  clock.py  damage.py  debuffs.py  debufs.py  editor.py  mixins.py  test_attackable.py  test_clock.py  test_damage.py  test_debuffs.py  units.py  utils.py
src/python/dota2/domain/: models.py
tests/: conftest.py  debuffs.py  test_attackable.py  test_clock.py  test_damage.py  test_debuffs.py  test_debufs.py  test_dota2.py  test_spell_caster.py  test_version.py
