# gazelle:python_manifest_file_name	third_party/python/gazelle_python.yaml

load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + [
        "@rules_python_gazelle_plugin//python",
        "@gazelle_rust//rust_language",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = "//:gazelle_binary",
)

gazelle(
    name = "gazelle-update-go-repos",
    args = [
        "-from_file=third_party/go/go.mod",
        "-to_macro=third_party/go/deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
    gazelle = "//:gazelle_binary",
)
